# skill_effect_simulator

./: CMakeLists.txt  README.md
config/: level_design.json  level_difficulty.csv  monster_def.csv  player_build.json  player_profile_template.json  spawn_events.csv  weapon_projectile_standard.json  weapon_projectile_standard.zh.jsonc
docs/: player_profile_template.md  projectile_weapon_design.md  spawn_developer_manual.md
src/: main.cpp
src/core/: sim_types.hpp
src/ecs/: monster_pool.cpp  monster_pool.hpp
src/io/: config_loader.cpp  config_loader.hpp  json_value.cpp  json_value.hpp  metrics_logger.cpp  metrics_logger.hpp
src/spatial/: uniform_grid.cpp  uniform_grid.hpp
src/systems/: combat_system.cpp  combat_system.hpp  game_director.cpp  game_director.hpp  movement_system.cpp  movement_system.hpp  projectile_weapon_system.cpp  projectile_weapon_system.hpp  skill_numeric_component.hpp  skill_system.cpp  skill_system.hpp  wave_system.cpp  wave_system.hpp
